# circ-obfuscation

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile.am  build-deps.sh  build.sh  circobf.sh  clean.sh  configure.ac  get-kappas.sh  info.sh  kappas-to-latex.sh  kappas.csv  main.c  makefile  mio.sh  run-debug.sh  run-valgrind.sh  run.sh  test.sh  test_clt.c
circuits/: add.acirc  addmul.acirc  aes1r.c2a.acirc  aes1r.c2v.acirc  aes1r.dsl.acirc  aes1r.o1.acirc  aes1r.opt-1.acirc  aes1r.opt-2.acirc  aes1r.opt.acirc  aes1r_128.c2a.acirc  aes1r_128.c2v.acirc  aes1r_128.dsl.acirc  aes1r_128.opt-1.acirc  aes1r_128.opt-2.acirc  aes1r_128.opt.acirc  aes1r_128_1.c2a.acirc  aes1r_128_1.c2v.acirc  aes1r_128_1.dsl.acirc  aes1r_128_1.o1.acirc  aes1r_128_1.o2.acirc  aes1r_128_1.opt-1.acirc  aes1r_128_1.opt-2.acirc  aes1r_16.c2a.acirc  aes1r_16.c2v.acirc  aes1r_16.dsl.acirc  aes1r_16.opt-1.acirc  aes1r_16.opt-2.acirc  aes1r_16.opt.acirc  aes1r_16_1.c2a.acirc  aes1r_16_1.c2v.acirc  aes1r_16_1.dsl.acirc  aes1r_16_1.o1.acirc  aes1r_16_1.o2.acirc  aes1r_16_1.o3.acirc  aes1r_16_1.opt-1.acirc  aes1r_16_1.opt-2.acirc  aes1r_16_1.opt-3.acirc  aes1r_2.c2a.acirc  aes1r_2.c2v.acirc  aes1r_2.dsl.acirc  (+447 more)
circuits/all-circuits/: b0.dsl.acirc  b0_16.dsl.acirc  b0_2.c2a.acirc  b0_2.c2c.acirc  b0_2.dsl.acirc  b0_3.c2a.acirc  b0_3.c2c.acirc  b0_3.dsl.acirc  b0_32.dsl.acirc  b0_4.c2a.acirc  b0_4.c2c.acirc  b0_4.dsl.acirc  b0_5.c2a.acirc  b0_5.c2c.acirc  b0_5.dsl.acirc  b0_6.c2a.acirc  b0_6.c2c.acirc  b0_6.dsl.acirc  b0_64.dsl.acirc  b0_7.c2a.acirc  b0_7.c2c.acirc  b0_7.dsl.acirc  b0_8.dsl.acirc  f1_128.dsl.acirc  f1_16.dsl.acirc  f1_32.dsl.acirc  f1_64.dsl.acirc  fa_16.dsl.acirc  ggm_3_32.dsl.acirc  ggm_rachel_16_16.dsl.acirc  ggm_rachel_2_16.dsl.acirc  ggm_rachel_3_16.dsl.acirc  ggm_rachel_8_32.dsl.acirc  sbox.dsl.acirc  sbox_.c2a.acirc  sbox_.c2c.acirc
circuits/circuits/: aes1r.c2a.acirc  aes1r.c2c.acirc  aes1r.c2v.acirc  aes1r.dsl.acirc  b0.c2a.acirc  b0.c2c.acirc  b0.c2v.acirc  b0.dsl.acirc  b0_16.c2a.acirc  b0_16.c2c.acirc  b0_16.c2v.acirc  b0_16.dsl.acirc  b0_2.c2a.acirc  b0_2.c2c.acirc  b0_2.c2v.acirc  b0_2.dsl.acirc  b0_3.c2a.acirc  b0_3.c2c.acirc  b0_3.c2v.acirc  b0_3.dsl.acirc  b0_32.c2a.acirc  b0_32.c2c.acirc  b0_32.c2v.acirc  b0_32.dsl.acirc  b0_4.c2a.acirc  b0_4.c2c.acirc  b0_4.c2v.acirc  b0_4.dsl.acirc  b0_5.c2a.acirc  b0_5.c2c.acirc  b0_5.c2v.acirc  b0_5.dsl.acirc  b0_6.c2a.acirc  b0_6.c2c.acirc  b0_6.c2v.acirc  b0_6.dsl.acirc  b0_64.c2a.acirc  b0_64.c2c.acirc  b0_64.c2v.acirc  b0_64.dsl.acirc  (+95 more)
circuits/ggm/: ggm_12_16.dsl.acirc  ggm_12_32.dsl.acirc  ggm_16_16.dsl.acirc  ggm_16_32.dsl.acirc  ggm_4_16.dsl.acirc  ggm_4_32.dsl.acirc  ggm_8_16.dsl.acirc  ggm_8_32.dsl.acirc
circuits/point/: point.dsl.acirc  point_base10.dsl.acirc  point_base11.dsl.acirc  point_base12.dsl.acirc  point_base13.dsl.acirc  point_base15.dsl.acirc  point_base8.dsl.acirc
circuits/sigma/: ggm_sigma_1_128.dsl.acirc  ggm_sigma_1_128.o1.acirc  ggm_sigma_1_128.opt-1.acirc  ggm_sigma_1_16.dsl.acirc  ggm_sigma_1_16.opt.acirc  ggm_sigma_1_16_128.dsl.acirc  ggm_sigma_1_16_32.dsl.acirc  ggm_sigma_1_16_64.dsl.acirc  ggm_sigma_1_256_32.dsl.acirc  ggm_sigma_1_256_64.dsl.acirc  ggm_sigma_1_32.dsl.acirc  ggm_sigma_1_32.o1.acirc  ggm_sigma_1_32.opt-1.acirc  ggm_sigma_1_32.opt.acirc  ggm_sigma_1_32_128.dsl.acirc  ggm_sigma_1_32_32.dsl.acirc  ggm_sigma_1_32_64.dsl.acirc  ggm_sigma_1_64.dsl.acirc  ggm_sigma_1_64.o1.acirc  ggm_sigma_1_64.opt-1.acirc  ggm_sigma_1_64_128.dsl.acirc  ggm_sigma_1_64_32.dsl.acirc  ggm_sigma_1_64_64.dsl.acirc  ggm_sigma_2_128.dsl.acirc  ggm_sigma_2_128.o1.acirc  ggm_sigma_2_128.opt-1.acirc  (+41 more)
scripts/: aes1r-compiler-info.sh  circuit-info.sh  compiler-info.sh  gen-latex.sh  get-kappas.sh  ggm-prf-all.sh  ggm-prf.sh  kappa-info-ggm.sh  kappa-info.sh  kappas-to-latex.sh  kappas.csv  optimizer-info.sh  prg-info.sh  runall.sh  standard-vs-sigma.sh  test.sh  utils.sh
src/: Makefile.am  bitvector.c  bitvector.h  circ.c  circ.h  circ_params.c  circ_params.h  circobf.c  circuit.c  circuit.h  clt13.c  clt13.h  evaluate.c  evaluate.h  fake_encoding.c  fake_encoding.h  index.c  index.h  index_set.c  index_set.h  input_chunker.c  input_chunker.h  level.c  level.h  linked-list.c  linked-list.h  main.c  mife.h  mife_run.c  mife_run.h  mife_util.c  mife_util.h  mio.c  mmap.c  mmap.h  obf_params.c  obf_params.h  obf_run.c  obf_run.h  obfuscate.c  (+14 more)
src/ab/: Makefile.am  build.c  encoding.c  input_chunker.c  input_chunker.h  level.c  level.h  obf_params.c  obf_params.h  obfuscator.c  obfuscator.h  public_params.c  secret_params.c  vtables.h
src/lin/: Makefile.am  build.c  encoding.c  encoding.h  input_chunker.c  level.c  level.h  obf_params.c  obf_params.h  obfuscator.c  obfuscator.h  public_params.c  secret_params.c  vtables.h
src/lz/: Makefile.am  build.c  encoding.c  obf_index.c  obf_index.h  obf_params.c  obf_params.h  obfuscator.c  obfuscator.h  public_params.c  secret_params.c  vtables.h
src/mife/: Makefile.am  encoding.c  index.h  mife.c  mife.h  mife_params.c  mife_params.h  mife_run.c  mife_run.h  public_params.c  secret_params.c
src/mife-cmr/: encoding.c  mife.c  mife.h  mife_params.c  mife_params.h  public_params.c  secret_params.c
src/mife-gc/: mife.c  mife.h  mife_params.c  mife_params.h
src/mobf/: Makefile.am  obf_params.c  obf_params.h  obfuscator.c  obfuscator.h
src/obf-cmr/: obf_params.c  obf_params.h  obfuscator.c  obfuscator.h
src/obf-lz/: Makefile.am  encoding.c  obf_params.c  obf_params.h  obfuscator.c  obfuscator.h  public_params.c  secret_params.c
src/obf-polylog/: encoding.c  extra.c  extra.h  obf_params.c  obf_params.h  obfuscator.c  obfuscator.h  public_params.c  secret_params.c
src/parser/: parse.y  scan.l
src/polylog/: encoding.c  extra.c  extra.h  obf_params.c  obf_params.h  obfuscator.c  obfuscator.h  public_params.c  secret_params.c  wire.c  wire.h
src/zim/: Makefile.am  build.c  encoding.c  encoding.h  obf_index.c  obf_index.h  obf_params.c  obf_params.h  obfuscator.c  obfuscator.h  public_params.c  public_params.h  secret_params.c  secret_params.h  vtables.h
(+49 files in other folders)
